Update README about running tests
And drop use of --spatial-ref-sys, which is not needed anymore
now that we use --extension (already loads spatial-ref-sys)

--- a/src/test/sql/regress/Makefile
+++ b/src/test/sql/regress/Makefile
@@ -1,6 +1,6 @@
 
 check: loader #00-regress
-	POSTGIS_REGRESS_DB=nibio_reg ./run_test.pl -v --spatial_ref_sys --extension --topology $(RUNTESTFLAGS) ./resolve_overlap_and_gap
+	POSTGIS_REGRESS_DB=nibio_reg ./run_test.pl -v --extension --topology $(RUNTESTFLAGS) ./resolve_overlap_and_gap
 
 loader:
 	mkdir -p ../loader; \
