--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,20 @@ dist: xenial
 addons:
   apt:
     packages:
-      - postgresql-11
-      - postgresql-11-postgis-2.5
-      - postgresql-11-postgis-2.5-scripts
+      - postgresql-12
+      - postgresql-12-postgis-3
+      - postgresql-12-postgis-3-scripts
       - postgis
-#      - postgis-2.5-client
-#      - postgis-2.5-util
-  postgresql: '11'
+  postgresql: '12'
 
-before_install:
-  - sudo sed -i 's/port = 5433/port = 5432/' /etc/postgresql/11/main/postgresql.conf
-  - sudo cp /etc/postgresql/{10,11}/main/pg_hba.conf
-  - sudo service postgresql stop
-  - sudo service postgresql start 11
+env:
+    global:
+        - PGVER=12
+        - PGPORT=5433
 
 services:
   - postgresql
 
-global:
-  - PGPORT=5432
 script:
 #  - find / -name shp2pgsql* 2>/dev/null 
   - echo "select version()" | psql template1
